--- a/git_turnpage_demo/res/values/strings.xml
+++ b/git_turnpage_demo/res/values/strings.xml
@@ -2,7 +2,6 @@
 <resources>
 
     <string name="app_name">git_turnpage_demo</string>
-    <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
-
+	<string name="btn_text_1">百叶窗效果</string>
+	<string name="btn_text_2">小黑块效果</string>
 </resources>
