--- a/git_turnpage_demo/res/values/strings.xml
+++ b/git_turnpage_demo/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="app_name">git_turnpage_demo</string>
 	<string name="btn_text_1">百叶窗效果</string>
 	<string name="btn_text_2">小黑块效果</string>
+	<string name="btn_text_3">平移效果</string>
 </resources>
